# main

./: CMakeLists.txt  barelang_2023.xml  data_posisi.csv  grid.txt  grid_path.txt  package.xml
config/: barelang.yaml
launch/: barelang_robot.launch.py
src/: main (copy 1).cpp  main.cpp  main.cpp--bacup  main.cpp--drible  main.cpp--fikri  main.cpp--fix-nasional  main.cpp--latihan16JunMalam  main.cpp--latihan18Jun  main.cpp--nasional  main.cpp--no-pinalty  main.cpp--robocup15Jun  main.cpp21May  main2.cpp  main3.cpp  mainbackup2.cpp  run_lua.cpp
